syntax = "proto3";

package pkbhowmick.just_grpc;

option go_package = "github.com/pkbhowmick/just-grpc/proto";

import "proto/processor_message.proto";
import "google/protobuf/timestamp.proto";
import "proto/memory_message.proto";
import "proto/storage_message.proto";
import "proto/screen_message.proto";
import "proto/keyboard_message.proto";

message Laptop {
  string id = 1;
  string name = 2;
  string brand = 3;
  CPU cpu = 4;
  repeated GPU gpu = 5;
  Memory memory = 6;
  repeated Storage storage = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight {
    double weight_kg = 10;
    double weight_lb = 11;
  }
  double price_bdt = 12;
  uint32 released_year = 13;
  google.protobuf.Timestamp updated_at = 14;
}